--- a/growpi/profiles/sge/cluster.yaml
+++ b/growpi/profiles/sge/cluster.yaml
@@ -156,377 +156,12 @@ rmhost_report_merge:
   output: "logs/02.{rule}/{rule}.{jobid}.o"
   error: "logs/02.{rule}/{rule}.{jobid}.e"
 
-assembly_megahit:
-  mem: "10G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.e"
-
-assembly_idba_ud:
-  mem: "20G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.e"
-
-assembly_metaspades:
-  mem: "80G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.e"
-
-assembly_spades:
-  mem: "20G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.e"
-
-assembly_plass:
-  mem: "20G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.e"
-
-assembly_opera_ms:
-  mem: "50G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{jobid}.e"
-
-assembly_metaquast:
-  mem: "8G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-assembly_metaquast_multiqc:
+profiling_grid:
   mem: "2G"
-  output: "logs/04.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
+  output: "logs/04.{rule}/{rule}.{wildcards.sample}.{jobid}.o"
+  error: "logs/04.{rule}/{rule}.{wildcards.sample}.{jobid}.e"
 
-assembly_report:
-  mem: "1G"
-  output: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-assembly_report_merge:
+profiling_grid_merge:
   mem: "2G"
-  output: "logs/04.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/04.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-alignment_scaftigs_index:
-  mem: "2G"
-  output: "logs/05.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/05.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-alignment_reads_scaftigs:
-  mem: "8G"
-  output: "logs/05.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.o"
-  error: "logs/05.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.e"
-
-alignment_base_depth:
-  mem: "2G"
-  output: "logs/05.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.o"
-  error: "logs/05.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.e"
-
-alignment_report:
-  mem: "1G"
-  output: "logs/05.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/05.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-binning_metabat2_coverage:
-  mem: "1G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_metabat2:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_maxbin2_coverage:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_maxbin2:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_concoct_cut_bed:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_concoct_coverage:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_concoct:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_vamb_combine_scaftigs:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_vamb_dict_scaftigs:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_vamb_index_scaftigs:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_vamb_align_scaftigs:
-  mem: "20G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.e"
-
-binning_vamb_sort_bam:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.e"
-
-binning_vamb_align_scaftigs_report:
-  mem: "1G"
-  output: "logs/06.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-binning_vamb_coverage:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{wildcards.sample}.{jobid}.e"
-
-binning_vamb_gen_abundance_matrix:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_vamb:
-  #partition: "gpu"
-  #qos: "gpu"
-  #gres: "gpu:1" # Thanks Juilian and Bill of HKU-HPC
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_vamb_postprocess:
-  #partition: "gpu"
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_graphbin2_prepare_assembly:
-  mem: "1G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_graphbin2_prepare_binned:
-  mem: "1G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{binner_graphbin}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{binner_graphbin}.{jobid}.e"
-
-binning_graphbin2:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_dastools_preprocess:
-  mem: "1G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_dastools:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-binning_report:
-  mem: "1G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.e"
-
-binning_report_merge:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.e"
-
-identify_virsorter2_prepare:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_virsorter2_init_run:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{jobid}.e"
-
-identify_virsorter2:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.split_num}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.split_num}.{jobid}.e"
-
-identify_virsorter2_merge:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_deepvirfinder:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_filter_pep:
-  mem: "5G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_hmmsearch_micomplete:
-  mem: "8G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_hmmsearch_micomplete_merge:
-  mem: "8G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_hmmsearch_vog:
-  mem: "8G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_hmmsearch_vog_merge:
-  mem: "8G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_deepvirfinder_merge:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_randomforest:
-  mem: "10G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembler}.{jobid}.e"
-
-identify_phamb_postprocess:
-  mem: "2G"
-  output: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/06.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-predict_scaftigs_gene_prodigal:
-  mem: "2G"
-  output: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-predict_scaftigs_gene_prokka:
-  mem: "2G"
-  output: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
-
-predict_scaftigs_gene_prokka_multiqc:
-  mem: "2G"
-  output: "logs/07.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/07.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-predict_mags_gene_prodigal:
-  mem: "2G"
-  output: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.o"
-  error: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.e"
-
-predict_mags_gene_prodigal_report:
-  mem: "1G"
-  output: "logs/07.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.o"
-  error: "logs/07.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.e"
-
-predict_mags_gene_prokka:
-  mem: "2G"
-  output: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.o"
-  error: "logs/07.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.e"
-
-predict_mags_gene_prokka_multiqc:
-  mem: "2G"
-  output: "logs/07.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.o"
-  error: "logs/07.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.e"
-
-checkm_lineage_wf:
-  mem: "50G"
-  output: "logs/08.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{wildcards.batchid}.{jobid}.o"
-  error: "logs/08.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{wildcards.batchid}.{jobid}.e"
-
-checkm_report:
-  mem: "1G"
-  output: "logs/08.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.o"
-  error: "logs/08.{rule}/{rule}.{wildcards.assembler}.{wildcards.binner_checkm}.{jobid}.e"
-
-checkv:
-  mem: "10G"
-  output: "logs/08.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.identifier}.{jobid}.o"
-  error: "logs/08.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.identifier}.{jobid}.e"
-
-checkv_postprocess:
-  mem: "1G"
-  output: "logs/08.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.identifier}.{jobid}.o"
-  error: "logs/08.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{wildcards.identifier}.{jobid}.e"
-
-dereplicate_gene_prepare:
-  mem: "1G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_gene_cdhit:
-  mem: "10G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_mags_drep:
-  mem: "20G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_vmags_prepare:
-  mem: "2G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_vmags_build_db:
-  mem: "5G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_vmags_blastn:
-  mem: "10G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_vmags_compute_ani:
-  mem: "5G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_vmags_clust:
-  mem: "5G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-dereplicate_vmags_postprocess:
-  mem: "2G"
-  output: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/09.{rule}/{rule}.{wildcards.assembler}.{jobid}.e"
-
-taxonomic_gtdbtk:
-  #partition: "hugemem"
-  mem: "50G"
-  output: "logs/10.{rule}/{rule}.{wildcards.assembler}.{wildcards.batchid}.{jobid}.o"
-  error: "logs/10.{rule}/{rule}.{wildcards.assembler}.{wildcards.batchid}.{jobid}.e"
-
-upload_md5_short_reads:
-  mem: "1G"
-  output: "logs/99.{rule}/{rule}.{wildcards.sample}.{jobid}.o"
-  error: "logs/99.{rule}/{rule}.{wildcards.sample}.{jobid}.e"
-
-upload_md5_scaftigs:
-  mem: "1G"
-  output: "logs/99.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.o"
-  error: "logs/99.{rule}/{rule}.{wildcards.binning_group}.{wildcards.assembly_group}.{wildcards.assembler}.{jobid}.e"
+  output: "logs/04.{rule}/{rule}.{jobid}.o"
+  error: "logs/04.{rule}/{rule}.{jobid}.e"
