refactor, add grid_single and grid_multi

--- a/growpi/snakefiles/Snakefile
+++ b/growpi/snakefiles/Snakefile
@@ -10,7 +10,7 @@ shell.executable("bash")
 SAMPLES = growpi.parse_samples(config)
 
 
-include: "../rules/grid.smk"
+include: "../rules/profiling_grid.smk"
 
 
 rule all:
