--- a/growpi/profiles/sge/cluster.yaml
+++ b/growpi/profiles/sge/cluster.yaml
@@ -156,12 +156,22 @@ rmhost_report_merge:
   output: "logs/02.{rule}/{rule}.{jobid}.o"
   error: "logs/02.{rule}/{rule}.{jobid}.e"
 
-profiling_grid:
+profiling_grid_single:
   mem: "2G"
   output: "logs/04.{rule}/{rule}.{wildcards.sample}.{jobid}.o"
   error: "logs/04.{rule}/{rule}.{wildcards.sample}.{jobid}.e"
 
-profiling_grid_merge:
+profiling_grid_single_merge:
+  mem: "2G"
+  output: "logs/04.{rule}/{rule}.{jobid}.o"
+  error: "logs/04.{rule}/{rule}.{jobid}.e"
+
+profiling_grid_multi:
+  mem: "2G"
+  output: "logs/04.{rule}/{rule}.{wildcards.sample}.{jobid}.o"
+  error: "logs/04.{rule}/{rule}.{wildcards.sample}.{jobid}.e"
+
+profiling_grid_multi_merge:
   mem: "2G"
   output: "logs/04.{rule}/{rule}.{jobid}.o"
   error: "logs/04.{rule}/{rule}.{jobid}.e"
